# taxi

./: .gitignore  README.md  pyproject.toml  streamlit_app.py  test_main_gui.py
taxy/: __init__.py  main_gui.py  multiplier_slider.py  plot_calculator.py
